--- a/index.html
+++ b/index.html
@@ -8,24 +8,31 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap">
 
   <style>
+    body{
+      width: 100%;
+    }
     .head{
+      width: 100%;
       background-color: black;
-      height: 100px;
+      height: 10px;
     }
    .footer-spacing {
+    width: 100%;
   background-color: #f0f0f0; /* Set this to any plain background color you prefer */
   height: 500px; /* Adjust the height as needed */
 }
 
     /* General footer styling */
-    footer {
+    footer { 
+      width: 95%;
       background-color: rgb(0, 136, 178);
-      padding: 20px 50px;
+      padding: 20px 40px;
       color: rgba(255, 255, 255, 0.6);
       font-family: 'Poppins', sans-serif;
     }
 
     .footer-container {
+      width: 97%;
       display: flex;
       flex-direction: column;
     }
